modules/gdscript/tests/scripts/analyzer/errors/typed_array_init_with_unconvertable_in_literal.gd
func test():
	var unconvertable := 1
	var typed: Array[Object] = [unconvertable]
	print('not ok')
